n8n/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    name: n8n
    environment: base
    # Enable pod security standards
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
